// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component applies correct styles for teal color 1`] = `
<DocumentFragment>
  <button
    class="text-20 mobile:tracking-0.4 w-full rounded-full py-3 font-medium outline-none transition-all duration-300 hover:outline-offset-0 tablet:text-22 tablet:tracking-0.44 tablet:py-5 desktop:text-24 desktop:tracking-0.48 desktop:py-6 bg-teal-dark text-white hover:outline hover:outline-8 hover:outline-teal-darkTranslucent active:bg-black"
    data-testid="button-test-id"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component applies correct styles for white color 1`] = `
<DocumentFragment>
  <button
    class="text-20 mobile:tracking-0.4 w-full rounded-full py-3 font-medium outline-none transition-all duration-300 hover:outline-offset-0 tablet:text-22 tablet:tracking-0.44 tablet:py-5 desktop:text-24 desktop:tracking-0.48 desktop:py-6 bg-white text-blue-default hover:outline hover:outline-8 hover:outline-whiteOpacity active:bg-teal-light"
    data-testid="button-test-id"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component displays the correct text 1`] = `
<DocumentFragment>
  <button
    class="text-20 mobile:tracking-0.4 w-full rounded-full py-3 font-medium outline-none transition-all duration-300 hover:outline-offset-0 tablet:text-22 tablet:tracking-0.44 tablet:py-5 desktop:text-24 desktop:tracking-0.48 desktop:py-6 bg-teal-dark text-white hover:outline hover:outline-8 hover:outline-teal-darkTranslucent active:bg-black"
    data-testid="button-test-id"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component passes additional props correctly 1`] = `
<DocumentFragment>
  <button
    class="text-20 mobile:tracking-0.4 w-full rounded-full py-3 font-medium outline-none transition-all duration-300 hover:outline-offset-0 tablet:text-22 tablet:tracking-0.44 tablet:py-5 desktop:text-24 desktop:tracking-0.48 desktop:py-6 bg-teal-dark text-white hover:outline hover:outline-8 hover:outline-teal-darkTranslucent active:bg-black"
    data-testid="button-test-id"
    disabled=""
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button component renders the Button component correctly 1`] = `
<DocumentFragment>
  <button
    class="text-20 mobile:tracking-0.4 w-full rounded-full py-3 font-medium outline-none transition-all duration-300 hover:outline-offset-0 tablet:text-22 tablet:tracking-0.44 tablet:py-5 desktop:text-24 desktop:tracking-0.48 desktop:py-6 bg-teal-dark text-white hover:outline hover:outline-8 hover:outline-teal-darkTranslucent active:bg-black"
    data-testid="button-test-id"
  >
    Click me
  </button>
</DocumentFragment>
`;
